# endcord

./: .pre-commit-config.yaml  .ruff.toml  Pipfile  README.md  build.py  commands.md  configuration.md  extensions.md  main.py  pyproject.toml  screenshots.md  setup.py  todo.txt  version_update.py
.github/: CONTRIBUTING.md  dependabot.yml  screenshots.md
.github/ISSUE_TEMPLATE/: blank-issue.md  bug_report.md  feature_request.md
.github/workflows/: build-and-release.yml
Themes/: better_lines.ini  default.ini
endcord/: app.py  arg.py  assist_data.py  client_properties.py  clipboard.py  color.py  debug.py  defaults.py  discord.py  downloader.py  formatter.py  game_detection.py  gateway.py  keybinding.py  media.py  message.py  parser.py  peripherals.py  perms.py  pgcurses.py  profile_manager.py  rpc.py  search.py  token_manager.py  tui.py  voice.py  xterm256.py
endcord_cython/: color.pyx  formatter.pyx  media.pyx  pgcurses.pyx  search.pyx  tui.pyx
themes/: better_lines.ini  default.ini  legacy.ini  legacy_lines.ini  rounded_edges.ini
