[project]
name = "endcord"
version = "0.9.0"
description = "Feature rich Discord TUI client."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-protos>=0.0.2",
    "emoji>=2.14.1",
    "numpy==2.2.6",   # "numpy>=2.3.2",
    "pexpect>=4.9.0",
    "pysocks>=1.7.1",
    "python-magic>=0.4.27; sys_platform != 'win32'",
    "python-magic-bin>=0.4.14; sys_platform == 'win32'",
    "python-socks>=2.7.2",
    "pywin32>=311 ; sys_platform == 'win32'",
    "pywin32-ctypes>=0.2.3; sys_platform == 'win32'",
    "soundcard>=0.4.4",   # "soundcard>=0.4.5",
    "soundfile>=0.13.1",
    "urllib3>=2.5.0",
    "websocket-client>=1.8.0",
    "windows-curses>=2.4.1; sys_platform == 'win32'",
    "windows-toasts>=1.3.1; sys_platform == 'win32'",
]

[dependency-groups]
build = [
    "cython>=3.1.3",
    "nuitka>=2.7.13",
    "pyinstaller>=6.15.0",
    "setuptools>=80.9.0",
]
media = [
    "av>=15.1.0",
    "pillow>=11.3.0",
]
