[project]
name = "endcord"
version = "0.9.0"
description = "Feature rich Discord TUI client."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-protos>=0.0.2",
    "emoji>=2.15.0",
    "filetype>=1.2.0",
    "numpy>=2.3.4",
    "pexpect>=4.9.0",
    "pysocks>=1.7.1",
    "python-socks>=2.7.2",
    "pywin32>=311; sys_platform == 'win32'",
    "pywin32-ctypes>=0.2.3; sys_platform == 'win32'",
    "soundcard>=0.4.5",
    "soundfile>=0.13.1",
    "urllib3>=2.5.0",
    "websocket-client>=1.9.0",
    "windows-curses>=2.4.1; sys_platform == 'win32'",
    "windows-toasts>=1.3.1; sys_platform == 'win32'",
]

[dependency-groups]
build = [
    "cython>=3.1.6",
    "nuitka>=2.8.4",
    "pyinstaller>=6.16.0",
    "setuptools>=80.9.0",
]
media = [
    "av>=16.0.1",
    "pillow>=12.0.0",
    "pynacl>=1.6.0",
]
